feat: add availability read api
